--- a/prayer_page_2.html
+++ b/prayer_page_2.html
@@ -30,7 +30,7 @@
   <header class="header">
       <ul class="ul">
         <li>
-          <a href="#مرحبا">
+          <a href="index.html">
             مرحبا بكم
           </a>
         </li>
