--- a/prayer_page_3.html
+++ b/prayer_page_3.html
@@ -30,7 +30,7 @@
   <header class="header">
       <ul class="ul">
         <li>
-          <a href="#مرحبا">
+          <a href="index.html">
             مرحبا بكم
           </a>
         </li>
@@ -157,7 +157,7 @@
         <li>الطهارة من الحَدَثين (1) مع القدرة: لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث ابن عمر: (لا يقبل الله صلاة بغير طهور) (2).</li>
         <li>
 دخول الوقت للصلاة المؤقتة: لقوله تعالى: (إِنَّ الصَّلَاةَ كَانَتْ عَلَى الْمُؤْمِنِينَ كِتَابًا مَوْقُوتًا) [النساء: 103]، ولحديث جبريل حين أمّ النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - بالصلوات الخمس، ثم قال: (ما بين هذين الوقتين وقت) <span id="hadith4">الحديث</span> (3). فلا تصح الصلاة قبل دخول وقتها، ولا بعد خروجه، إلا لعذر.</li>
-        <li>ستر العورة مع القدرة بشيء لا يصف البشرة: لقوله تعالى: (يَا بَنِي آدَمَ خُذُوا زِينَتَكُمْ عِنْدَ كُلِّ مَسْجِدٍ) [الأعراف: 31]. وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يقبل الله صلاة حائض إلا بخمار) (4). وعورة الرجل البالغ ما بين السرة والركبة لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - لجابر - رضي الله عنه -: (إذا صليت في ثوب واحد، فإن كان واسعاً فالتحف به، وإن كان ضيقاً فاتزر به) (5). والأولى والأفضل أن يجعل على عاتقه شيئاً من الثياب؛ لأن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - نهى الرجل أن يصلي في الثوب ليس على عاتقه منه شيء. والمرأة كلها عورة إلا وجهها وكفيها، إلا إذا صلَّت أمام الأجانب -أي غير المحارم- فإنها تغطي كل شيء؛ لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (المرأة عورة) (6)، وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يقبل الله صلاة حائض إلا بخمار).</li>
+        <li>ستر العورة مع القدرة بشيء لا يصف البشرة: لقوله تعالى: (يَا بَنِي آدَمَ خُذُوا زِينَتَكُمْ عِنْدَ كُلِّ مَسْجِدٍ) [الأعراف: 31]. وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يقبل الله صلاة حائض إلا بخمار) (4). وعورة الرجل البالغ ما بين السرة والركبة لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - لجابر - رضي الله عنه -: (إذا صليت في ثوب واحد، فإن كان واسعاً فالتحف به، وإن كان ضيقاً فاتزر به) <span id="hadith5">الحديث</span> (5). والأولى والأفضل أن يجعل على عاتقه شيئاً من الثياب؛ لأن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - نهى الرجل أن يصلي في الثوب ليس على عاتقه منه شيء. والمرأة كلها عورة إلا وجهها وكفيها، إلا إذا صلَّت أمام الأجانب -أي غير المحارم- فإنها تغطي كل شيء؛ لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (المرأة عورة) (6)، وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يقبل الله صلاة حائض إلا بخمار).</li>
         <li>اجتناب النجاسة في بدنه وثوبه وبقعته -أي مكان صلاته- مع القدرة:<br>
           لقوله تعالى: (وَثِيَابَكَ فَطَهِّرْ) [المدثر: 4]. وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (تَنَزَّهوا عن البول؛ فإن عامة عذاب القبر منه) (7)، ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - لأسماء في دم الحيض يصيب الثوب: (تحتُّه، ثم تقرصه بالماء، ثم تنضحه، ثم تصلي فيه) (8)، لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - لأصحابه وقد بال الأعرابي في المسجد: (أريقوا على بوله سجلاً من ماء) (9).
         </li>
