--- a/prayer_page_4.html
+++ b/prayer_page_4.html
@@ -30,7 +30,7 @@
   <header class="header">
       <ul class="ul">
         <li>
-          <a href="#مرحبا">
+          <a href="index.html">
             مرحبا بكم
           </a>
         </li>
@@ -155,8 +155,7 @@
         <li>القيام: في الفرض على القادر منتصباً؛ لقوله تعالى: (وَقُومُوا لِلَّهِ قَانِتِينَ) [البقرة: 238]، ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - لعمران بن حصين: (صَل قائماً، فإن لم تستطع فقاعداً، فإن لم تستطع فعلى جنب) (1)، فإن ترك القيام في الفريضة لعذر، كمرض وخوف وغير ذلك، فإنه يُعذر بذلك، ويصلي حسب حاله قاعداً أو على جنب.</li>
         <li> أما صلاة النافلة: فإن القيام فيها سنة وليس ركناً، لكن صلاة القائم فيها أفضل من صلاة القاعد؛ لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (صلاة القاعد على النصف من صلاة القائم) (2).</li>
         <li>تكبيرة الإحرام في أولها: وهي قول (الله أكبر) لا يُجْزئه غيرها؛ لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - للمسيء الصلاة: (إذا قمت إلى الصلاة فكبر) (3)، وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (تحريمها التكبير وتحليلها التسليم) (4)، فلا تنعقد الصلاة بدون التكبير.</li>
-        <li>
-قراءة الفاتحة مرتبة في كل ركعة: لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا صلاة لمن لم يقرأ بفاتحة الكتاب) (5). ويستثنى من ذلك المسبوق: إذا أدرك الإمام راكعاً، أو أدرك من قيامه ما لم يتمكن معه من قراءة الفاتحة، وكذا المأموم في الجهرية، يُستثنى من قراءتها، لكن لو قرأها في سكتات الإمام فإن ذلك أولى؛ أخذاً بالأحوط.</li>
+        <li>قراءة الفاتحة مرتبة في كل ركعة: لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا صلاة لمن لم يقرأ بفاتحة الكتاب) (5). ويستثنى من ذلك المسبوق: إذا أدرك الإمام راكعاً، أو أدرك من قيامه ما لم يتمكن معه من قراءة الفاتحة، وكذا المأموم في الجهرية، يُستثنى من قراءتها، لكن لو قرأها في سكتات الإمام فإن ذلك أولى؛ أخذاً بالأحوط.</li>
         <li>الركوع في كل ركعة: لقوله تعالى: (يَا أَيُّهَا الَّذِينَ آمَنُوا ارْكَعُوا وَاسْجُدُوا) [الحج: 77]. ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - للمسيء الصلاة: (ثم اركع حتى تطمئن راكعاً) (6).</li>
         <li>الرفع من الركوع والاعتدال منه قائماً: لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث المسيء: (واركع حتى تطمئن راكعاً ثم ارفع حتى تعتدل قائماً).</li>
         <li>السجود: لقوله تعالى: (وَاسْجُدُوا) [الحج: 77]، ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث المسيء: (ثم اسجد حتى تطمئن ساجداً). ويكون السجود في كل ركعة مرتين على الأعضاء السبعة المذكورة في حديث ابن عباس. وفيه: (أمرت أن أسجد على سبعة أعظم: الجبهة -وأشار بيده إلى أنفه- واليدين، والركبتين، وأطراف القدمين) (7).</li>
@@ -181,7 +180,7 @@
       <li>رواه البخاري (809)، ومسلم برقم (490) - 230. واللفظ لمسلم.</li>
       <li>أخرجه النسائي (2/ 240)، وصححه الألباني (الإرواء برقم 319).</li>
       <li>رواه البخاري برقم (631).</li>
-      <li>رواه أبو داود برقم (61)، والترمذي برقم (3)، وابن ماجه برقم (275)، وتقدم في الصفحة السابقة.</li>
+
     </ol>
   </section>
 </body>
