--- a/prayer_page_6.html
+++ b/prayer_page_6.html
@@ -87,7 +87,7 @@
           </a>
           <ul class="ul-2">
             <li>
-              <a href="javascript:">
+              <a href="prayer_page_1.html">
                 عدد الصلوات المكتوبه
               </a>
             </li>
@@ -107,27 +107,27 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="javascript:">
               واجباتها
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_5.html">
                 سننها
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_6.html">
                 مبطلاتها
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_7.html">
                 ما يكره
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_8.html">
                 حكم تارك الصلاه
               </a>
             </li>
@@ -147,12 +147,18 @@
   </header>
   <!-- End menu -->
   <section>
-    <h1>عدد الصلوات المكتوبه</h1>
-    <p>عدد الصلوات المكتوبة خمس، وهي: الفجر والظهر والعصر والمغرب والعشاء. وهي مجمع عليها، وقد دلّ على ذلك حديث طلحة بن عبيد الله أن أعرابياً قال: يا رسول الله ماذا فرض الله عليَّ من الصلاة؟ قال: (خمس صلوات في اليوم والليلة .. <span id="hadith1">الحديث</span>) (1)، وحديث أنس - رضي الله عنه - في قصة الرجل من أهل البادية، وقوله للنبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: وزعم رسولك أن علينا خمس صلوات في يومنا وليلتنا. قال - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (صدق) ... <span id="hadith2">الحديث</span> (2).</p><hr>
+    <h1>في سننها</h1>
+    <div>
+      وهي نوعان: سنن أفعال وسنن أقوال.<br>
+      <h4>أما سنن الأفعال:</h4>
+      فكرفع اليدين مع تكبيرة الإحرام وعند الركوع وعند الرفع منه وحطهما عقب ذلك؛ لأن مالك بن الحويرث كان إذا صلَّى كبَّر، ورفع يديه، وإذا أراد أن يركع رفع يديه، وإذا رفع رأسه من الركوع رفع يديه.
+وحَدَّثَ أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - صنع ذلك (1). ووضع اليمين على الشمال وجعلهما على صدره حال قيامه، ونظره في موضع سجوده، وتفرقته بين قدميه قائماً، وقبض ركبتيه بيديه مفرجتي الأصابع في ركوعه، ومد ظهره فيه، وجعل رأسه حياله.
+      <h4>وأما سنن الأقوال:</h4>
+      فكدعاء الاستفتاح، والبسملة، والتعوذ، وقول: آمين، والزيادة على قراءة الفاتحة، والزيادة على تسبيح الركوع والسجود، والدعاء بعد التشهد قبل السلام.
+    </div>
+    <hr>
     <ol>
-      <li>الراوي : طلحة بن عبيدالله | المحدث : البخاري | المصدر : صحيح البخاري | الصفحة أو الرقم : 1891 | خلاصة حكم المحدث : [صحيح]</li>
-      <li>الراوي : أنس بن مالك | المحدث : مسلم | المصدر : صحيح مسلم
-الصفحة أو الرقم : 12 | خلاصة حكم المحدث : [صحيح]</li>
+      <li>أخرجه مسلم برقم (391).</li>
     </ol>
   </section>
 </body>
