--- a/prayer_page_7.html
+++ b/prayer_page_7.html
@@ -87,7 +87,7 @@
           </a>
           <ul class="ul-2">
             <li>
-              <a href="javascript:">
+              <a href="prayer_page_1.html">
                 عدد الصلوات المكتوبه
               </a>
             </li>
@@ -107,27 +107,27 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="javascript:">
               واجباتها
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_5.html">
                 سننها
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_6.html">
                 مبطلاتها
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_7.html">
                 ما يكره
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="prayer_page_8.html">
                 حكم تارك الصلاه
               </a>
             </li>
@@ -147,12 +147,30 @@
   </header>
   <!-- End menu -->
   <section>
-    <h1>عدد الصلوات المكتوبه</h1>
-    <p>عدد الصلوات المكتوبة خمس، وهي: الفجر والظهر والعصر والمغرب والعشاء. وهي مجمع عليها، وقد دلّ على ذلك حديث طلحة بن عبيد الله أن أعرابياً قال: يا رسول الله ماذا فرض الله عليَّ من الصلاة؟ قال: (خمس صلوات في اليوم والليلة .. <span id="hadith1">الحديث</span>) (1)، وحديث أنس - رضي الله عنه - في قصة الرجل من أهل البادية، وقوله للنبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: وزعم رسولك أن علينا خمس صلوات في يومنا وليلتنا. قال - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (صدق) ... <span id="hadith2">الحديث</span> (2).</p><hr>
+    <h1>مبطلاتها</h1>
+    <div>
+      <h4>يبطل الصلاة أمور نجملها فيما يأتي:</h4>
+      <ol>
+        <li>يبطل الصلاة ما يبطل الطهارة؛ لأن الطهارة شرط لصحتها، فإذا بطلت الطهارة بطلت الصلاة.</li>
+        <li>الضحك بصوت: وهو القهقهة، فإنه يبطلها بالإجماع؛ لأنه كالكلام، بل أشد، ولما في ذلك من الاستخفاف والتلاعب المنافي لمقصود الصلاة. أما التبسم بلا قهقهة فإنه لا يبطلها، كما نقله ابن المنذر وغيره.</li>
+        <li>الكلام عمداً لغير مصلحة الصلاة: فعن زيد بن أرقم - رضي الله عنه - قال: كنا نتكلم في الصلاة، يكلم الرجل منا صاحبه، وهو إلى جنبه في الصلاة، حتى نزلت: (وَقُومُوا لِلَّهِ قَانِتِينَ) [البقرة: 238]. فأمرنا بالسكوت ونهينا عن الكلام (1). فإن تكلم جاهلاً أو ناسياً، لا تبطل صلاته.</li>
+        <li>مرور المرأة البالغة، أو الحمار، أو الكلب الأسود بين يدي المصلي دون موضع سجوده: لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (إذا قام أحدكم يصلي فإنه يستره إذا كان بين يديه مثل آخرة الرحل، فإذا لم يكن بين يديه مثل آخِرَةِ الرَّحْلِ، فإنه يقطع صلاته الحمار والمرأة والكلب الأسود) (2). والرَّحْلُ: هو ما يركب عليه على الإبل، وهو كالسرج للفرس، ومؤخرة الرحل مقدارها ذراع، فيكون هذا المقدار هو المجزئ في السترة.</li>
+        <li> كشف العورة عمداً: لما تقدم في الشروط.</li>
+        <li>استدبار القبلة: لأن استقبالها شرط لصحة الصلاة.</li>
+        <li>اتصال النجاسة بالمصلي، مع العلم بها، وتذكرها إذا لم يُزلها في الحال.</li>
+        <li>ترك ركن من أركانها أو شرط من شروطها عمداً بدون عذر.</li>
+        <li> العمل الكثير من غير جنسها لغير ضرورة، كالأكل والشرب عمداً.</li>
+        <li>الاستناد لغير عذر، لأن القيام شرط لصحتها.</li>
+        <li>تعمُّد زيادة ركن فعلي كالزيادة في الركوع والسجود؛ لأنه يخل بهيئتها، فتبطل إجماعاً.</li>
+        <li> تعمُّد تقديم بعض الأركان على بعض؛ لأن ترتيبها ركن، كما تقدم.</li>
+        <li> تعمُّد السلام قبل إتمامها.</li>
+        <li>تعمُّد إحالة المعنى في القراءة، أي قراءة الفاتحة؛ لأنها ركن.</li>
+        <li>فسخ النية بالتردد بالفسخ، وبالعزم عليه؛ لأن استدامة النية شرط.</li>
+      </ol>
+    <hr>
     <ol>
-      <li>الراوي : طلحة بن عبيدالله | المحدث : البخاري | المصدر : صحيح البخاري | الصفحة أو الرقم : 1891 | خلاصة حكم المحدث : [صحيح]</li>
-      <li>الراوي : أنس بن مالك | المحدث : مسلم | المصدر : صحيح مسلم
-الصفحة أو الرقم : 12 | خلاصة حكم المحدث : [صحيح]</li>
+      <li>أخرجه البخاري برقم (1200)، ومسلم برقم (539).</li>
+      <li>رواه مسلم برقم (510).</li>
     </ol>
   </section>
 </body>
