--- a/sec1.html
+++ b/sec1.html
@@ -30,7 +30,7 @@
     <header class="header">
         <ul class="ul">
             <li>
-                <a href="#مرحبا">
+                <a href="index.html">
                     مرحبا بكم
                 </a>
             </li>
@@ -92,42 +92,42 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:">
+                        <a href="prayer_page_2.html">
                             علي من تجب
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="prayer_page_3.html">
                             شروطها
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="prayer_page_4.html">
                             اركانها
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="prayer_page_5.html">
                             واجباتها
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="prayer_page_6.html">
                             سننها
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="prayer_page_7.html">
                             مبطلاتها
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="prayer_page_8.html">
                             ما يكره
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="prayer_page_9.html">
                             حكم تارك الصلاه
                         </a>
                     </li>
@@ -159,7 +159,7 @@
             صححه الألباني (الإرواء برقم 247)
             </li>
             <li>
-                (1/ 201) صححه الحاكم في المستدرك 
+                (1/ 201) صححه الحاكم في المستدرك
             </li>
         </ol>
     </section>
