--- a/sec3.htm
+++ b/sec3.htm
@@ -30,7 +30,7 @@
     <header class="header">
         <ul class="ul">
             <li>
-                <a href="#مرحبا">
+                <a href="index.html">
                     مرحبا بكم
                 </a>
             </li>
@@ -147,11 +147,11 @@
     </header>
     <!-- End menu -->
     <section>
-        <h1>  
+        <h1>
             شروط الوضوء
         </h1>
             <div>
-                <h4> ويشترط لصحة الوضوء ما يأتي:</h4> 
+                <h4> ويشترط لصحة الوضوء ما يأتي:</h4>
                 <ol>
                     <li>
                         الإسلام، والعقل، والتمييز، فلا يصح من الكافر، ولا المجنون، ولا يكون معتبراً من الصغير الذي دون سن التمييز
@@ -160,13 +160,13 @@
                         النية: لحديث: (إنما الأعمال بالنيات) (1). ولا يشرع التلفظ بها؛ لعدم ثبوته عن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ
                     </li>
                     <li>
-                        الماء الطهور: لما تقدم في المياه، أما الماء النجس فلا يصح الوضوء به. 
+                        الماء الطهور: لما تقدم في المياه، أما الماء النجس فلا يصح الوضوء به.
                     </li>
                     <li>
-                        إزالة ما يمنع وصول الماء إلى البشرة، من شمع أو عجين ونحوهما: كطلاء الأظافر الذي يعرف بين النساء اليوم. 
+                        إزالة ما يمنع وصول الماء إلى البشرة، من شمع أو عجين ونحوهما: كطلاء الأظافر الذي يعرف بين النساء اليوم.
                     </li>
                     <li>
-                        الاستجمار أو الاستنجاء عند وجود سببهما لما تقدم. 
+                        الاستجمار أو الاستنجاء عند وجود سببهما لما تقدم.
                     </li>
                     <li>
                         الموالاة و الترتيب.
