--- a/sec5.htm
+++ b/sec5.htm
@@ -30,7 +30,7 @@
     <header class="header">
         <ul class="ul">
             <li>
-                <a href="#مرحبا">
+                <a href="index.html">
                     مرحبا بكم
                 </a>
             </li>
@@ -147,18 +147,18 @@
     </header>
     <!-- End menu -->
     <section>
-        <h1>  
+        <h1>
             سنن الوضوء
         </h1>
         <div>
-             هناك أفعال يستحب فعلها عند الوضوء ويؤجر عليها من فعلها، ومن تركها فلا حرج عليه، 
-            <h4>تسمى هذه الأفعال بسنن الوضوء، وهي : </h4> 
+             هناك أفعال يستحب فعلها عند الوضوء ويؤجر عليها من فعلها، ومن تركها فلا حرج عليه،
+            <h4>تسمى هذه الأفعال بسنن الوضوء، وهي : </h4>
             <ol>
                 <li>
-                    التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (3)</span> 
+                    التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (3)</span>
                 </li>
                 <li>
-                    السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (4</span> 
+                    السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (4</span>
                 </li>
                 <li>
                     غسل الكفين ثلاثاً في أول الوضوء: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - ذلك، إذ كان يغسل كفيه ثلاثاً كما ورد في صفة وضوئه.
