--- a/sec6.htm
+++ b/sec6.htm
@@ -30,7 +30,7 @@
     <header class="header">
         <ul class="ul">
             <li>
-                <a href="#مرحبا">
+                <a href="index.html">
                     مرحبا بكم
                 </a>
             </li>
@@ -147,27 +147,27 @@
     </header>
     <!-- End menu -->
     <section>
-        <h1>  
+        <h1>
             نواقص الوضوء
         </h1>
         <div>
              <h4> أولا ما هي النواقص :</h4>
             هي الأشياء التي تبطل الوضوء وتفسده وتنقسم الي 6 وهم :
             <ol>
-                <li>          
-                    الخارج من السبيلين: أي من مخرج البول والغائط، والخارج: إما أن يكون بولاً أو غائطاً أو منيّاً أو مذيّاً أو دم استحاضة أو ريحاً قليلاً كان أو كثيراً؛ <span>لقوله تعالى: (أَوْ جَاءَ أَحَدٌ مِنْكُمْ مِنَ الْغَائِطِ) [النساء: 43]</span> .و <span class="dif">قوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يقبل الله صلاة أحدكم إذا أحدث حتى يتوضأ)</span> وقد تقدَّم. <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (ولكن من غائط أو بول ونوم (1) )</span> . <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - فيمن شك هل خرج منه ريح أو لا: (فلا ينصرف حتى يسمع صوتاً أو يجد ريحاً) (2)</span> 
+                <li>
+                    الخارج من السبيلين: أي من مخرج البول والغائط، والخارج: إما أن يكون بولاً أو غائطاً أو منيّاً أو مذيّاً أو دم استحاضة أو ريحاً قليلاً كان أو كثيراً؛ <span>لقوله تعالى: (أَوْ جَاءَ أَحَدٌ مِنْكُمْ مِنَ الْغَائِطِ) [النساء: 43]</span> .و <span class="dif">قوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يقبل الله صلاة أحدكم إذا أحدث حتى يتوضأ)</span> وقد تقدَّم. <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (ولكن من غائط أو بول ونوم (1) )</span> . <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - فيمن شك هل خرج منه ريح أو لا: (فلا ينصرف حتى يسمع صوتاً أو يجد ريحاً) (2)</span>
                 </li>
                 <li>
-                    خروج النجاسة من بقية البدن: فإن كان بولاً أو غائطاً نقض مطلقاً لدخوله في النصوص السابقة، وإن كان غيرهما كالدم والقيء: فإن فحش وكَثُرَ فالأَولى أن يتوضأ منه؛ عملاً بالأحوط، وإن كان يسيراً فلا يتوضأ منه بالاتفاق. 
+                    خروج النجاسة من بقية البدن: فإن كان بولاً أو غائطاً نقض مطلقاً لدخوله في النصوص السابقة، وإن كان غيرهما كالدم والقيء: فإن فحش وكَثُرَ فالأَولى أن يتوضأ منه؛ عملاً بالأحوط، وإن كان يسيراً فلا يتوضأ منه بالاتفاق.
                 </li>
                 <li>
                     زوال العقل أو تغطيته بإغماء أو نوم: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (ولكن من غائط وبول ونوم).</span> و <span class="dif">قوله: (العين وِكَاءُ (3) السَّه (4)، فمن نام فليتوضأ) (5).</span> وأما الجنون والإغماء والسكر ونحوه فينقض إجماعاً، والنوم الناقض هو المستغرق الذي لا يبقى معه إدراك على أي هيئة كان النوم، أما النوم اليسير فإنه لا ينقض الوضوء، لأن الصحابة -رضي الله عنهم- كان يصيبهم النعاس وهم في انتظار الصلاة، ويقومون، يُصَلُّون، ولا يتوضؤون .
                 </li>
                 <li>
-                    مس فرج الآدمي بلا حائل: لحديث بسرة بنت صفوان رضي الله عنها  <span class="dif">أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - قال: (من مسّ ذكره فليتوضأ) (1)</span> . و <span class="dif">في حديث أبي أيوب وأم حبيبة: (من مسّ فرجه فليتوضأ) (2)</span> . 
+                    مس فرج الآدمي بلا حائل: لحديث بسرة بنت صفوان رضي الله عنها  <span class="dif">أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - قال: (من مسّ ذكره فليتوضأ) (1)</span> . و <span class="dif">في حديث أبي أيوب وأم حبيبة: (من مسّ فرجه فليتوضأ) (2)</span> .
                 </li>
                 <li>
-                    أكل لحم الإبل: <span class="dif"> لحديث جابر بن سمرة أن رجلاً سأل النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: أنتوضأ من لحوم الغنم؟ قال: (إن شئت توضأ وإن شئت لا تتوضأ)، قال: أنتوضأ من لحوم الإبل؟ قال: (نعم توضأ من لحوم الإبل). (3)</span> 
+                    أكل لحم الإبل: <span class="dif"> لحديث جابر بن سمرة أن رجلاً سأل النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: أنتوضأ من لحوم الغنم؟ قال: (إن شئت توضأ وإن شئت لا تتوضأ)، قال: أنتوضأ من لحوم الإبل؟ قال: (نعم توضأ من لحوم الإبل). (3)</span>
                 </li>
                 <li>
                     الردة عن الإسلام <span>لقوله تعالى: (وَمَنْ يَكْفُرْ بِالْإِيمَانِ فَقَدْ حَبِطَ عَمَلُهُ) [المائدة: 5]</span> . وكل ما أوجب الغسل أوجب الوضوء غير الموت.
