--- a/sec7.htm
+++ b/sec7.htm
@@ -30,7 +30,7 @@
     <header class="header">
         <ul class="ul">
             <li>
-                <a href="#مرحبا">
+                <a href="index.htmlحبا">
                     مرحبا بكم
                 </a>
             </li>
@@ -147,11 +147,11 @@
     </header>
     <!-- End menu -->
     <section>
-        <h1>  
+        <h1>
             ما يجب له الوضوء
         </h1>
         <div>
-            <h4>           
+            <h4>
                  ويجب على المكلف فعل الوضوء للأمور الآتية:
             </h4>
             <ol>
