--- a/sec8.htm
+++ b/sec8.htm
@@ -30,7 +30,7 @@
     <header class="header">
         <ul class="ul">
             <li>
-                <a href="#مرحبا">
+                <a href="index.html">
                     مرحبا بكم
                 </a>
             </li>
@@ -147,19 +147,19 @@
     </header>
     <!-- End menu -->
     <section>
-        <h1>  
+        <h1>
             ما يستحب له الوضوء
         </h1>
         <div>
-            <h4>           
+            <h4>
                  يستحب الوضوء ويندب في الأحوال التالية:
             </h4>
             <ol>
                 <li>
-                    عند ذكر الله تعالى وقراءة القرآن. 
+                    عند ذكر الله تعالى وقراءة القرآن.
                 </li>
                 <li>
-                    عند كل صلاة: لمواظبته - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - على ذلك، كما <span class="dif">في حديث أنس - رضي الله عنه - قال: (كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأعند كل صلاة) (2)</span> . 
+                    عند كل صلاة: لمواظبته - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - على ذلك، كما <span class="dif">في حديث أنس - رضي الله عنه - قال: (كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأعند كل صلاة) (2)</span> .
                 </li>
                 <li>
                     يستحب الوضوء للجنب إذا أراد أن يعود للجماع، أو أراد النوم أو الأكل أو الشرب: <span class="dif">لحديث أبي سعيد الخدري - رضي الله عنه - أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - قال: (إذا أتى أحدكم أهله، ثم أراد أن يعود، فليتوضأ) (3)</span> و <span class="dif"> لحديث عائشة رضي الله عنها: (أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - كان إذا أراد أن ينام وهو جنب، توضأ وضوءه للصلاة، قبل أن ينام) (4). وفي رواية لها: (فأراد أن يأكل أو ينام) (5)</span> .
