--- a/prayer_page_9.html
+++ b/prayer_page_9.html
@@ -117,7 +117,7 @@
                   </a>
               </li>
               <li>
-                  <a href="javascript:">
+                  <a href="prayer_page_7.html">
                       مبطلاتها
                   </a>
               </li>
@@ -127,7 +127,7 @@
                   </a>
               </li>
               <li>
-                  <a href="prayer_page_9.html">
+                  <a href="javascript:">
                       حكم تارك الصلاه
                   </a>
               </li>
@@ -147,30 +147,16 @@
   </header>
   <!-- End menu -->
   <section>
-    <h1>مبطلاتها</h1>
+    <h1>حكم تارك الصلاة</h1>
     <div>
-      <h4>يبطل الصلاة أمور نجملها فيما يأتي:</h4>
-      <ol>
-        <li>يبطل الصلاة ما يبطل الطهارة؛ لأن الطهارة شرط لصحتها، فإذا بطلت الطهارة بطلت الصلاة.</li>
-        <li>الضحك بصوت: وهو القهقهة، فإنه يبطلها بالإجماع؛ لأنه كالكلام، بل أشد، ولما في ذلك من الاستخفاف والتلاعب المنافي لمقصود الصلاة. أما التبسم بلا قهقهة فإنه لا يبطلها، كما نقله ابن المنذر وغيره.</li>
-        <li>الكلام عمداً لغير مصلحة الصلاة: فعن زيد بن أرقم - رضي الله عنه - قال: كنا نتكلم في الصلاة، يكلم الرجل منا صاحبه، وهو إلى جنبه في الصلاة، حتى نزلت: (وَقُومُوا لِلَّهِ قَانِتِينَ) [البقرة: 238]. فأمرنا بالسكوت ونهينا عن الكلام (1). فإن تكلم جاهلاً أو ناسياً، لا تبطل صلاته.</li>
-        <li>مرور المرأة البالغة، أو الحمار، أو الكلب الأسود بين يدي المصلي دون موضع سجوده: لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (إذا قام أحدكم يصلي فإنه يستره إذا كان بين يديه مثل آخرة الرحل، فإذا لم يكن بين يديه مثل آخِرَةِ الرَّحْلِ، فإنه يقطع صلاته الحمار والمرأة والكلب الأسود) (2). والرَّحْلُ: هو ما يركب عليه على الإبل، وهو كالسرج للفرس، ومؤخرة الرحل مقدارها ذراع، فيكون هذا المقدار هو المجزئ في السترة.</li>
-        <li> كشف العورة عمداً: لما تقدم في الشروط.</li>
-        <li>استدبار القبلة: لأن استقبالها شرط لصحة الصلاة.</li>
-        <li>اتصال النجاسة بالمصلي، مع العلم بها، وتذكرها إذا لم يُزلها في الحال.</li>
-        <li>ترك ركن من أركانها أو شرط من شروطها عمداً بدون عذر.</li>
-        <li> العمل الكثير من غير جنسها لغير ضرورة، كالأكل والشرب عمداً.</li>
-        <li>الاستناد لغير عذر، لأن القيام شرط لصحتها.</li>
-        <li>تعمُّد زيادة ركن فعلي كالزيادة في الركوع والسجود؛ لأنه يخل بهيئتها، فتبطل إجماعاً.</li>
-        <li> تعمُّد تقديم بعض الأركان على بعض؛ لأن ترتيبها ركن، كما تقدم.</li>
-        <li> تعمُّد السلام قبل إتمامها.</li>
-        <li>تعمُّد إحالة المعنى في القراءة، أي قراءة الفاتحة؛ لأنها ركن.</li>
-        <li>فسخ النية بالتردد بالفسخ، وبالعزم عليه؛ لأن استدامة النية شرط.</li>
-      </ol>
+      <h4>من ترك الصلاة جاحِداً لوجوبها، فهو كافر مرتد، لأنه مُكذِّبٌ لله ورسوله وإجماع المسلمين.</h4>
+      أمَّا من تركها تهاوناً وكسلاً: فالصحيح أنه كافر إذا كان تاركاً لها دائماً وبالكلية، لقوله تعالى عن المشركين: (فَإِنْ تَابُوا وَأَقَامُوا الصَّلَاةَ وَآتَوُا الزَّكَاةَ فَإِخْوَانُكُمْ فِي الدِّينِ) [التوبة: 11]. فدلَّ على أنهم إن لم يحققوا شرط إقامة الصلاة فليسوا بمسلمين، ولا إخوة لنا في الدين. ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (العهد الذي بيننا وبينهم الصلاة، فمن تركها فقد كفر) (1). وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (إن بين الرجل وبين الشرك والكفر تَرْكَ الصلاة) (2).
+أمَّا من كان يصلي أحياناً ويترك أحياناً، أو يصلي فرضاً أو فرضين، فالظاهر أنه لا يكفر؛ لأنه لم يتركها بالكلية، كما هو نص الحديث: (ترك الصلاة) فهذا ترك (صلاة) لا (الصلاة). والأصل بقاء الإسلام، فلا نخرجه منه إلا بيقين، فما ثبت بيقين لا يرتفع إلا بيقين (3).
     <hr>
     <ol>
-      <li>أخرجه البخاري برقم (1200)، ومسلم برقم (539).</li>
-      <li>رواه مسلم برقم (510).</li>
+      <li>أخرجه الترمذي برقم (2126)، والنسائي (1/ 231)، وأحمد (5/ 346)، والحاكم (1/ 6، 7). قال الترمذي: حسن صحيح غريب، وصححه الحاكم ووافقه الذهبي، وصححه الألباني (صحيح الترمذي برقم 2113).</li>
+      <li>أخرجه مسلم برقم (82).</li>
+      <li>انظر: الشرح الممتع. (2/ 24 - 28).</li>
     </ol>
   </section>
 </body>
