--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </a>
           <ul class="ul-1">
               <li>
-                  <a href="javascript:">
+                  <a href="sec1.html">
                       تعريفه و أحكامه
                   </a>
               </li>
