--- a/prayer_page_3.html
+++ b/prayer_page_3.html
@@ -30,7 +30,7 @@
   <header class="header">
       <ul class="ul">
         <li>
-          <a href="index.html">
+          <a href="javascript:">
             مرحبا بكم
           </a>
         </li>
@@ -39,98 +39,98 @@
             الوضوء<i class="fas fa-hand-point-left"></i>
           </a>
           <ul class="ul-1">
-            <li>
-              <a href="#تعريفه و أحكامه">
-                تعريفه و أحكامه
-              </a>
-            </li>
-            <li>
-              <a href="#(الدليل علي وجوبه(من/متي">
-                الدليل علي وجوبه(من/متي)
-              </a>
-            </li>
-            <li>
-              <a href="#شروطه">
-                شروطه
-              </a>
-            </li>
-            <li>
-              <a href="#شروطه">
-                فروضه
-              </a>
-            </li>
-            <li>
-              <a href="#شروطه">
-                سننه
-              </a>
-            </li>
-            <li>
-              <a href="#شروطه">
-                نواقضه
-              </a>
-            </li>
-            <li>
-              <a href="#شروطه">
-                ما يجب له الوضوء
-              </a>
-            </li>
-            <li>
-              <a href="#شروطه">
-                ما يستحب له الوضوء
-              </a>
-            </li>
+              <li>
+                  <a href="sec1.html">
+                      تعريفه و أحكامه
+                  </a>
+              </li>
+              <li>
+                  <a href="sec2.html">
+                      الدليل علي وجوبه(من/متي)
+                  </a>
+              </li>
+              <li>
+                  <a href="sec3.htm">
+                      شروطه
+                  </a>
+              </li>
+              <li>
+                  <a href="sec4.htm">
+                      فروضه
+                  </a>
+              </li>
+              <li>
+                  <a href="sec5.htm">
+                      سننه
+                  </a>
+              </li>
+              <li>
+                  <a href="sec6.htm">
+                      نواقضه
+                  </a>
+              </li>
+              <li>
+                  <a href="sec7.htm">
+                      ما يجب له الوضوء
+                  </a>
+              </li>
+              <li>
+                  <a href="sec8.htm">
+                      ما يستحب له الوضوء
+                  </a>
+              </li>
           </ul>
-        </li>
-        <li class="show_child2">
+      </li>
+      <li class="show_child2">
           <a href="javascript:" class="click">
-            الصلاه<i class="fas fa-hand-point-left"></i>
+              الصلاه<i class="fas fa-hand-point-left"></i>
           </a>
           <ul class="ul-2">
-            <li>
-              <a href="prayer_page_1.html">
-                عدد الصلوات المكتوبه
-              </a>
-            </li>
-            <li>
-              <a href="prayer_page_2.html">
-                علي من تجب
-              </a>
-            </li>
-            <li>
-              <a href="javascript:">
-                شروطها
-              </a>
-            </li>
-            <li>
-              <a href="prayer_page_4.html">
-                اركانها
-              </a>
-            </li>
-            <li>
-              <a href="#">
-              واجباتها
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                سننها
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                مبطلاتها
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                ما يكره
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                حكم تارك الصلاه
-              </a>
-            </li>
+              <li>
+                  <a href="prayer_page_1.html">
+                      عدد الصلوات المكتوبه
+                  </a>
+              </li>
+              <li>
+                  <a href="prayer_page_2.html">
+                      علي من تجب
+                  </a>
+              </li>
+              <li>
+                  <a href="javascript:">
+                      شروطها
+                  </a>
+              </li>
+              <li>
+                  <a href="prayer_page_4.html">
+                      اركانها
+                  </a>
+              </li>
+              <li>
+                  <a href="prayer_page_5.html">
+                      واجباتها
+                  </a>
+              </li>
+              <li>
+                  <a href="prayer_page_6.html">
+                      سننها
+                  </a>
+              </li>
+              <li>
+                  <a href="prayer_page_7.html">
+                      مبطلاتها
+                  </a>
+              </li>
+              <li>
+                  <a href="prayer_page_8.html">
+                      ما يكره
+                  </a>
+              </li>
+              <li>
+                  <a href="prayer_page_9.html">
+                      حكم تارك الصلاه
+                  </a>
+              </li>
           </ul>
         </li>
         <li>
