--- a/sec4.htm
+++ b/sec4.htm
@@ -166,20 +166,23 @@
                     غسل الرجلين إلى الكعبين؛ <span>لقوله تعالى: (وَأَرْجُلَكُمْ إِلَى الْكَعْبَيْنِ) [المائدة: 6]</span>.
                 </li>
                 <li>
-                    الترتيب: لأن الله تعالى ذكره مرتباً؛ وتوضأ رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - مرتباً على حسب ما ذكر الله سبحانه: الوجه، فاليدين، فالرأس، فالرجلين، كما ورد ذلك في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث عبد الله بن زيد (1) وغيره.
+                    الترتيب: لأن الله تعالى ذكره مرتباً؛ وتوضأ رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - مرتباً على حسب ما ذكر الله سبحانه: الوجه، فاليدين، فالرأس، فالرجلين، كما ورد ذلك في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث عبد الله بن زيد (3) وغيره.
                 </li>
                 <li>
-                    الموالاة: بأن يكون غسل العضو عقب الذي قبله مباشرة بدون تأخير، فقد كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأ متوالياً، <span class="dif">ولحديث خالد بن معدان: (أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - رأى رجلاً يصلي وفي ظهر قدمه لُمعَةٌ قدر الدرهم لم يصبها الماء، فأمره أن يعيد الوضوء) (2)، </span> فلو لم تكن الموالاة شرطاً لأمره بغسل ما فاته، ولم يأمره بإعادة الوضوء كله. واللُّمْعَة: الموضع الذي لم يصبه الماء في الوضوء أو الغسل.
+                    الموالاة: بأن يكون غسل العضو عقب الذي قبله مباشرة بدون تأخير، فقد كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأ متوالياً، <span class="dif">ولحديث خالد بن معدان: (أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - رأى رجلاً يصلي وفي ظهر قدمه لُمعَةٌ قدر الدرهم لم يصبها الماء، فأمره أن يعيد الوضوء) (4)، </span> فلو لم تكن الموالاة شرطاً لأمره بغسل ما فاته، ولم يأمره بإعادة الوضوء كله. واللُّمْعَة: الموضع الذي لم يصبه الماء في الوضوء أو الغسل.
                 </li>
             </ol>
         </div>
         <hr>
         <ol>
             <li>
-                (1) رواه البخاري برقم (1)، ومسلم برقم (1907).
+                (2) رواه الترمذي برقم (37) وابن ماجه برقم (443) وصححه الألباني (صحيح سنن ابن ماجه برقم 357، والسلسلة الصحيحة برقم 36) وأفاض الشيخ -رحمه الله- في جمع طرقه والكلام عليه.
             </li>
             <li>
-                (2) رواه الترمذي برقم (37) وابن ماجه برقم (443) وصححه الألباني (صحيح سنن ابن ماجه برقم 357، والسلسلة الصحيحة برقم 36) وأفاض الشيخ -رحمه الله- في جمع طرقه والكلام عليه.
+                (3) رواه البخاري ، ومسلم برقم (1907).
+            </li>
+            <li>
+                (4) رواه البخاري برقم (4)، ومسلم برقم (1908).
             </li>
         </ol>
     </section>
