--- a/sec5.htm
+++ b/sec5.htm
@@ -155,10 +155,10 @@
             <h4>تسمى هذه الأفعال بسنن الوضوء، وهي : </h4>
             <ol>
                 <li>
-                    التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (3)</span>
+                    التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (5)</span>
                 </li>
                 <li>
-                    السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (4</span>
+                    السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (6)</span>
                 </li>
                 <li>
                     غسل الكفين ثلاثاً في أول الوضوء: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - ذلك، إذ كان يغسل كفيه ثلاثاً كما ورد في صفة وضوئه.
@@ -168,11 +168,11 @@
         <hr>
         <ol>
             <li>
-                (3) أخرجه أحمد (2/ 418)، وأبو داود برقم (101)، والحاكم (1/ 147) وغيرهم من حديث أبي هريرة - رضي الله عنه -، وحسنه: ابن الصلاح، وابن كثير، والعراقي، وقواه المنذري وابن حجر، وقال الألباني: حسن.
+                (5) أخرجه أحمد (2/ 418)، وأبو داود برقم (101)، والحاكم (1/ 147) وغيرهم من حديث أبي هريرة - رضي الله عنه -، وحسنه: ابن الصلاح، وابن كثير، والعراقي، وقواه المنذري وابن حجر، وقال الألباني: حسن.
                 (إرواء الغليل 1/ 122).
             </li>
             <li>
-                (4) أخرجه البخاري معلقاً بصيغة جزم: ك الصيام، ب سواك الرطب واليابس للصائم. ووصله النسائي (انظر: فتح الباري 4/ 159).
+                (6) أخرجه البخاري معلقاً بصيغة جزم: ك الصيام، ب سواك الرطب واليابس للصائم. ووصله النسائي (انظر: فتح الباري 4/ 159).
             </li>
         </ol>
     </section>
