1 step to finish

--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
   <link rel="stylesheet" href="css/header.css">
   <!-- master style sheet  -->
   <link rel="stylesheet" href="css/master.css">
-  <!-- for test -->
+  <!-- index style sheet  -->
+  <link rel="stylesheet" href="css/main.css">
   <title>صلي معنا</title>
 </head>
 
 <body dir="rtl">
+  <video src="media/proj_intro.mp4" lang="ar" controls autoplay>
+    Your browser does not support the video tag.
+  </video>
   <!-- start Menu  -->
   <header class="header">
       <ul class="ul">
@@ -132,12 +136,12 @@
           </ul>
         </li>
         <li>
-          <a href="#الصلاه">
+          <a href="contact_us.html">
             تواصل معنا
           </a>
         </li>
         <li>
-          <a href="#الصلاه">
+          <a href="about_us.html">
           حول
           </a>
         </li>
