--- a/prayer_page_1.html
+++ b/prayer_page_1.html
@@ -30,7 +30,7 @@
   <header class="header">
       <ul class="ul">
         <li>
-          <a href="javascript:">
+          <a href="index.html">
             مرحبا بكم
           </a>
         </li>
@@ -134,12 +134,12 @@
           </ul>
         </li>
         <li>
-          <a href="#الصلاه">
+          <a href="contact_us.html">
             تواصل معنا
           </a>
         </li>
         <li>
-          <a href="#الصلاه">
+          <a href="about_us.html">
           حول
           </a>
         </li>
