--- a/about_us.html
+++ b/about_us.html
@@ -2,13 +2,13 @@
 <head>
   <link rel="stylesheet" href="css/aboutus.css">
 </head>
-<body>
+<body dir="rtl">
   <?php require 'header.php'; ?>
-<div class="header"><h1> ABOUT US</h1></div>
-  <div class="popup"><h1 style="color:#0B3778;"> WHO WE ARE </h1> <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into</p> <h3 style="color:#0B3778;"> WE'RE DIFFERENT THAN THE REST </h3> <p><b>We're rooted in sales.</b> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here </p> <p><b> We've been where you are</b> content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem</p>
+<div class="header"><h1>معلومات عنا</h1></div>
+  <div class="popup"><h1 style="color:#0B3778;">من نحن</h1> <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into</p> <h3 style="color:#0B3778;">نحن نختلف عن الاخرين</h3> <p><b>We're rooted in sales.</b> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here </p> <p><b> We've been where you are</b> content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem</p>
   <div class="con_btn">
-    <a href="index.html"><button type="button" class="btn"> HOME </button></a>
-    <a href="contact_us.html"><button type="button" class="btn"> CONTECT US </button></a>
+    <a href="index.html"><button type="button" class="btn">الرئيسيه</button></a>
+    <a href="contact_us.html"><button type="button" class="btn">تواصل معنا</button></a>
   </div>
 </div>
 <div style="height: 400px;"></div>
