--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
           </ul>
         </li>
         <li>
+          <a href="vid_library.html">
+            قسم الفيديوهات
+          </a>
+        </li>
+        <li>
           <a href="contact_us.html">
             تواصل معنا
           </a>
