--- a/vid_library.html
+++ b/vid_library.html
@@ -30,7 +30,7 @@
   <header class="header">
     <ul class="ul">
       <li>
-        <a href="javascript:">
+        <a href="index.html">
           مرحبا بكم
         </a>
       </li>
@@ -132,6 +132,11 @@
             </a>
           </li>
         </ul>
+      </li>
+      <li>
+        <a href="javascript:">
+          قسم الفيديوهات
+        </a>
       </li>
       <li>
         <a href="contact_us.html">
