--- a/sec4.htm
+++ b/sec4.htm
@@ -134,6 +134,11 @@
           </ul>
         </li>
         <li>
+          <a href="vid_library.html">
+            قسم الفيديوهات
+          </a>
+        </li>
+        <li>
           <a href="contact_us.html">
             تواصل معنا
           </a>
